fixed modal styling on mobile devices

--- a/imports/components/styles/AssetModal.styl
+++ b/imports/components/styles/AssetModal.styl
@@ -1,5 +1,6 @@
 .modalTitle
 	font-size 30px
-	
-.customWidthModal
-	width 750px
+		
+@media(min-width: 1024px)
+	.customWidthModal
+		width 750px
